cmake_minimum_required(VERSION 3.1)
project(xenogrip)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(LINKER_LANGUAGE "CXX")
add_library(xenogrip SHARED ${CMAKE_CURRENT_SOURCE_DIR}/src/xenogrip.cpp)
target_link_libraries(xenogrip dl)
set_property(TARGET xenogrip PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET xenogrip PROPERTY CXX_STANDARD 14)
